# monguite

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Procfile  README.md  docker-compose.yml  fixtures.json  pyproject.toml  pytest.ini  railpack.json
.github/workflows/: ci.yml
app/: admin.py  factories.py  filters.py  mcp.py  mcp_auth.py  models.py  serializers.py  test_api.py  tests.py  views.py  viewsets.py
app/management/commands/: load_isa_data.py
app/migrations/: 0001_initial.py  0002_auto_20201105_1157.py  0002_community_remove_biome_preserved_area_and_more.py  0003_land_communities.py  0004_alter_land_unique_together.py  0005_alter_state_country.py
app/tests/: __init__.py  test_api.py  test_commands.py
app/tests/fixtures/: sample_isa_data.json
config/: asgi.py  build.sh  railway.json  settings.py  start.sh  urls.py  wsgi.py
config/settings/: __init__.py  base.py  ci.py  local.py  production.py
docs/: CONVENTIONS_BACKEND.md
mcp/: README.md  generate_oauth_config.py  server.py  test.py  test_auth.py  test_oauth.py
