[tool.poetry]
name = "monguite"
version = "0.1.0"
description = ""
authors = ["Felipe Vieira <me@felipet.io>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
django_redis = "^4.12.1"

[tool.poetry.dev-dependencies]
Werkzeug = "^1.0.1"
ipdb = "^0.13.4"
watchgod = "^0.6"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
coverage = "^5.3"
black = "^20.8b1"
pylint-django = "^2.3.0"
pre-commit = "^2.8.2"
factory-boy = "^3.1.0"
django-debug-toolbar = "^3.1.1"
django-extensions = "^3.0.9"
django-coverage-plugin = "^1.8.0"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
