[tool.poetry]
name = "monguite"
version = "0.1.0"
description = ""
authors = ["Felipe Vieira <me@felipet.io>"]
license = "GPLv3"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-redis = "^5.4.0"
requests = "^2.32.0"
djangorestframework = "^3.16.1"
django-filter = "^25.2"
drf-spectacular = "^0.29.0"

[tool.poetry.group.dev.dependencies]
Werkzeug = "^3.0.4"
ipdb = "^0.13.13"
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
coverage = "^7.6.1"
black = "^24.8.0"
pylint-django = "^2.5.5"
pre-commit = "^3.8.0"
factory-boy = "^3.3.1"
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
django-coverage-plugin = "^3.1.0"
pytest-django = "^4.9.0"


[tool.poetry.group.mcp.dependencies]
mcp = "^0.9.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"
starlette = "^0.50.0"
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
